rust/codec-pandoc/src/snapshots/pandoc_fragments@paragraph.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/paragraph.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "First paragraph."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Second paragraph."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Third paragraph, split over multiple lines."
    ]
  }
]
