rust/codec-pandoc/src/snapshots/pandoc_fragments@raw-block.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/raw-block.json

---
[]
