rust/codec-pandoc/src/snapshots/pandoc_fragments@raw-inline.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/raw-inline.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "This paragraph has some  inline."
    ]
  }
]
