rust/codec-pandoc/src/snapshots/pandoc_fragments@stikeout.json.snap
---
source: rust/codec-pandoc/src/decode.rs
assertion_line: 739
expression: json
input_file: fixtures/fragments/pandoc/stikeout.json
---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Strikeout",
        "content": [
          "striked-out"
        ]
      },
      " text."
    ]
  }
]
