rust/codec-pandoc/src/snapshots/pandoc_fragments@strong.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/strong.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Strong",
        "content": [
          "strongly"
        ]
      },
      " emphasized word."
    ]
  }
]
