rust/codec-pandoc/src/snapshots/pandoc_fragments@superscript.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/superscript.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Superscripts like CO",
      {
        "type": "Superscript",
        "content": [
          "2"
        ]
      },
      "."
    ]
  }
]
