rust/codec-pandoc/src/snapshots/pandoc_fragments@thematic-break.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/thematic-break.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "First theme."
    ]
  },
  {
    "type": "ThematicBreak"
  },
  {
    "type": "Paragraph",
    "content": [
      "Second theme."
    ]
  },
  {
    "type": "ThematicBreak"
  },
  {
    "type": "Paragraph",
    "content": [
      "Third theme. _____"
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Fourth theme."
    ]
  }
]
